unpackaged/main/default/objects/Vendor_Payment__c/Vendor_Payment__c.object-meta.xml
<CustomObject>
    <label>Vendor Payment</label>
    <nameField>
        <displayFormat>VAP Payment - {00000}</displayFormat>
        <label>Vendor Payment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendor Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>