unpackaged/main/default/objects/Vendor_Payment__c/fields/Check_Mail_Date__c.field-meta.xml
<CustomField>
    <fullName>Check_Mail_Date__c</fullName>
    <description>This is the date that the check is mailed to the vendor/contact.</description>
    <inlineHelpText>This is the date that the check is mailed to the vendor/contact.</inlineHelpText>
    <label>Check Mail Date</label>
    <type>Date</type>
</CustomField>