unpackaged/main/default/objects/Vendor_Payment__c/fields/Payment_Processed__c.field-meta.xml
<CustomField>
    <fullName>Payment_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will indicate if a payment to the vendor/contact has been processed.</description>
    <inlineHelpText>Check the box if the payment to the vendor/sales rep has been processed.</inlineHelpText>
    <label>Payment Processed</label>
    <type>Checkbox</type>
</CustomField>