unpackaged/main/default/objects/Vendor_Payment__c/fields/Submit_For_Payment__c.field-meta.xml
<CustomField>
    <fullName>Submit_For_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Submit For Payment</label>
    <type>Checkbox</type>
</CustomField>