unpackaged/main/default/objects/Vendor_Payment__c/fields/Vendor_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Payment_Amount__c</fullName>
    <description>This field will indicate the amount of payment sent to a vendor/contact for the referral.</description>
    <inlineHelpText>This field will indicate the amount of payment sent to a vendor/contact for the referral.</inlineHelpText>
    <label>Vendor Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>